[gd_scene load_steps=9 format=3 uid="uid://cxwei7g8nehdn"]

[ext_resource type="Texture2D" uid="uid://wn75psbolp0e" path="res://textures/jeffery.png" id="1_uwrxv"]
[ext_resource type="Script" uid="uid://dt25ajg5sqcl8" path="res://scripts/game.gd" id="1_yqjtg"]
[ext_resource type="Texture2D" uid="uid://bvh21ly3w5evi" path="res://textures/hint_arrow.png" id="3_lnu2h"]

[sub_resource type="LabelSettings" id="LabelSettings_uwrxv"]
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lnu2h"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0

[sub_resource type="LabelSettings" id="LabelSettings_lbhrr"]
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_lnu2h"]

[sub_resource type="LabelSettings" id="LabelSettings_yqjtg"]
font_size = 48
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[node name="Game" type="Node2D"]
script = ExtResource("1_yqjtg")

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true

[node name="Jeffery" type="TextureButton" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -128.0
offset_right = 128.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(128, 128)
mouse_default_cursor_shape = 2
texture_normal = ExtResource("1_uwrxv")

[node name="ClickHint" type="Label" parent="Jeffery"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_right = 100.0
offset_bottom = 49.0
grow_horizontal = 2
text = "Click Jeffery to gain POWER"
label_settings = SubResource("LabelSettings_uwrxv")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Panel" type="Panel" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.5
anchor_bottom = 1.0
grow_vertical = 2

[node name="Tabs" type="TabContainer" parent="CanvasLayer/Control/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
current_tab = 0

[node name="ALERT!" type="ScrollContainer" parent="CanvasLayer/Control/Panel/Tabs"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_lnu2h")
metadata/_tab_index = 0

[node name="VBox" type="VBoxContainer" parent="CanvasLayer/Control/Panel/Tabs/ALERT!"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="Text" type="RichTextLabel" parent="CanvasLayer/Control/Panel/Tabs/ALERT!/VBox"]
layout_mode = 2
bbcode_enabled = true
text = "[font size=32]Energy Cap Reached[/font]"
fit_content = true

[node name="Store" type="ScrollContainer" parent="CanvasLayer/Control/Panel/Tabs"]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_lnu2h")
metadata/_tab_index = 1

[node name="VBox" type="VBoxContainer" parent="CanvasLayer/Control/Panel/Tabs/Store"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="Upgrades" type="ScrollContainer" parent="CanvasLayer/Control/Panel/Tabs"]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_lnu2h")
metadata/_tab_index = 2

[node name="VBox" type="VBoxContainer" parent="CanvasLayer/Control/Panel/Tabs/Upgrades"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="Settings" type="ScrollContainer" parent="CanvasLayer/Control/Panel/Tabs"]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_lnu2h")
metadata/_tab_index = 3

[node name="VBox" type="VBoxContainer" parent="CanvasLayer/Control/Panel/Tabs/Settings"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="Label2" type="Label" parent="CanvasLayer/Control/Panel/Tabs/Settings/VBox"]
layout_mode = 2
text = "Sound"
label_settings = SubResource("LabelSettings_lbhrr")

[node name="Flow" type="HFlowContainer" parent="CanvasLayer/Control/Panel/Tabs/Settings/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/Control/Panel/Tabs/Settings/VBox/Flow"]
layout_mode = 2
text = "Master Volume"
label_settings = SubResource("LabelSettings_lnu2h")

[node name="HSlider" type="HSlider" parent="CanvasLayer/Control/Panel/Tabs/Settings/VBox/Flow"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="Flow2" type="HFlowContainer" parent="CanvasLayer/Control/Panel/Tabs/Settings/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/Control/Panel/Tabs/Settings/VBox/Flow2"]
layout_mode = 2
text = "Music Volume"
label_settings = SubResource("LabelSettings_lnu2h")

[node name="HSlider" type="HSlider" parent="CanvasLayer/Control/Panel/Tabs/Settings/VBox/Flow2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="Flow3" type="HFlowContainer" parent="CanvasLayer/Control/Panel/Tabs/Settings/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/Control/Panel/Tabs/Settings/VBox/Flow3"]
layout_mode = 2
text = "SFX Volume"
label_settings = SubResource("LabelSettings_lnu2h")

[node name="HSlider" type="HSlider" parent="CanvasLayer/Control/Panel/Tabs/Settings/VBox/Flow3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="Label" type="Label" parent="CanvasLayer/Control/Panel/Tabs/Settings/VBox"]
layout_mode = 2
text = "Save Management"
label_settings = SubResource("LabelSettings_lbhrr")

[node name="Flow4" type="HFlowContainer" parent="CanvasLayer/Control/Panel/Tabs/Settings/VBox"]
layout_mode = 2

[node name="Label2" type="Label" parent="CanvasLayer/Control/Panel/Tabs/Settings/VBox/Flow4"]
layout_mode = 2
text = "Autosave every"
label_settings = SubResource("LabelSettings_lnu2h")

[node name="SpinBox" type="SpinBox" parent="CanvasLayer/Control/Panel/Tabs/Settings/VBox/Flow4"]
layout_mode = 2
max_value = 600.0
suffix = "s"

[node name="Label3" type="Label" parent="CanvasLayer/Control/Panel/Tabs/Settings/VBox/Flow4"]
layout_mode = 2
text = "(set to 0 for no autosaves)"
label_settings = SubResource("LabelSettings_lnu2h")

[node name="StatMeter" type="Label" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 1.0
offset_bottom = 137.0
grow_horizontal = 2
text = "0 POWER"
label_settings = SubResource("LabelSettings_yqjtg")
horizontal_alignment = 1
autowrap_mode = 1

[node name="TemperatureMeter" type="Label" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
text = "0Â°"
label_settings = SubResource("LabelSettings_yqjtg")
horizontal_alignment = 1
autowrap_mode = 1

[node name="BuyHintArrow" type="TextureRect" parent="CanvasLayer/Control"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = -128.0
offset_right = 128.0
offset_bottom = 256.0
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(256, 0)
texture = ExtResource("3_lnu2h")

[connection signal="pressed" from="Jeffery" to="." method="_on_jeffery_pressed"]
